# cppnam

./: CMakeLists.txt  README.md  cppnam.kdev4
benchmarks/: 16_03_benchmark2_spikey.json  16_03_benchmark2_spikey_nest.json  16_03_benchmark_ess.json  16_03_benchmark_spikey.json  16_03_benchmark_spinn.json  sweep.json  sweep_ESS.json  sweep_spikey.json
cppnam/binam/: binam.cpp  binam.hpp  binary_matrix.cpp  binary_matrix.hpp  data_generator.cpp  data_generator.hpp  evaluation.cpp  evaluation.hpp  ncr.cpp  ncr.hpp  population_count.cpp  population_count.hpp
cppnam/cli/: data_generator_cli.cpp  sp_binam.cpp
cppnam/core/: binam_container.hpp  experiment.cpp  parameters.cpp  parameters.hpp  spike_trains.cpp  spike_trains.hpp  spiking_binam.cpp  spiking_binam.hpp  spiking_parameters.cpp
cppnam/util/: read_json.cpp
experiments/: test.json
experiments/recurrent/: params_1001004_max_n_info.json  params_1001004_max_rr.json  params_20204_max_n_info.json  params_20204_max_rr.json  params_50504_max_n_info.json  params_50504_max_rr.json
src/binnf/: serialiser.cpp  serialiser.hpp
src/cli/: binam.cpp  cppnam.cpp  data_generator.cpp  data_generator_cli.cpp  exp.cpp  ncr_test_cli.cpp  random_output.cpp  recurrent_BiNAM.cpp  sp_binam.cpp
src/core/: binam.cpp  binam.hpp  entropy.cpp  entropy.hpp  experiment.cpp  experiment.hpp  parameters.cpp  parameters.hpp  rec_binam.cpp  rec_binam.hpp  spike_trains.cpp  spike_trains.hpp  spiking_binam.cpp  spiking_binam.hpp  spiking_netw_basis.cpp  spiking_netw_basis.hpp  spiking_parameters.cpp  spiking_parameters.hpp  spiking_utils.cpp  spiking_utils.hpp
src/recurrent/: rec_binam.cpp  rec_binam.hpp  spiking_rec_binam.cpp  spiking_rec_binam.hpp
src/util/: binam.hpp  binary_matrix.cpp  binary_matrix.hpp  comperator.hpp  data.cpp  data.hpp  entropy.cpp  entropy.hpp  experiment.cpp  experiment.hpp  matrix.cpp  matrix.hpp  ncr.cpp  ncr.hpp  optimisation.cpp  optimisation.hpp  parameters.cpp  parameters.hpp  population_count.cpp  population_count.hpp  read_json.cpp  read_json.hpp  spike_trains.cpp  spike_trains.hpp  spiking_binam.cpp  spiking_binam.hpp  spiking_parameters.cpp  spiking_parameters.hpp
test/: CMakeLists.txt
test/binam/: test_binam.cpp  test_binary_matrix.cpp  test_data_generator.cpp  test_ncr.cpp  test_population_count.cpp
test/binnf/: test_serialiser.cpp
test/core/: test_binam.cpp  test_entropy.cpp  test_parameters.cpp  test_spike_trains.cpp  test_spiking_binam.cpp  test_spiking_parameters.cpp  test_spiking_utils.cpp
test/util/: test.json  test_binam.cpp  test_binary_matrix.cpp  test_comperator.cpp  test_entropy.cpp  test_ncr.cpp  test_parameters.cpp  test_population_count.cpp  test_read_json.cpp  test_spike_trains.cpp  test_spiking_binam.cpp  test_spiking_parameters.cpp
